--- a/index.html
+++ b/index.html
@@ -9,31 +9,67 @@
 </head>
 <body>
     <!-- Header Section -->
-   <header class="bg-success text-white py-4">
-    <div class="container d-flex align-items-center">
-        <!-- Logo on the left -->
-        <img src="images/Logo.jpeg" alt="Desi Home Flavour Logo" class="img-fluid me-3" style="max-width: 120px;">
-        
-        <!-- Title and tagline centered -->
-        <div class="text-center flex-grow-1">
-            <h1 class="display-4 mb-0">Angapradesh Home Flavour Private Limited</h1>
-            <p class="lead mb-0">Pure Home Made Products - 100% Organic</p>
-        </div>
-    </div>
-</header>
+    <header class="bg-success text-white py-3">
+        <div class="container">
+            <!-- Top Row with Logo and Brand Title/Tagline -->
+            <div class="d-flex align-items-center justify-content-between">
+                <!-- Logo on the left -->
+                <img src="images/Logo.jpeg" alt="Desi Home Flavour Logo" class="img-fluid" style="max-width: 100px; border-radius: 50%;">
 
+                <!-- Title and tagline centered -->
+                <div class="text-center flex-grow-1">
+                    <h1 class="display-5 fw-bold mb-1">Angapradesh Home Flavour Pvt. Ltd.</h1>
+                    <p class="lead mb-0">Pure Home Made Products - 100% Organic</p>
+                </div>
+
+                <!-- Order Now button on the right (visible on larger screens) -->
+                <div class="d-none d-lg-block">
+                    <a href="#order" class="btn btn-warning btn-lg text-white fw-semibold">Order Now</a>
+                </div>
+            </div>
+
+            <!-- Navigation Bar (Collapsible for mobile) -->
+            <nav class="navbar navbar-expand-lg navbar-dark mt-3">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#home">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#products">Products</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about">About Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Contact</a>
+                            </li>
+                        </ul>
+                        <!-- Order Now button for smaller screens -->
+                        <div class="d-lg-none text-center mt-3">
+                            <a href="#order" class="btn btn-warning btn-lg text-white fw-semibold w-100">Order Now</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
 
 
     <!-- Main Content -->
     <main class="container my-5">
         <!-- About Us Section -->
-        <section class="mb-5">
+        <section class="mb-5" id="about">
     <div class="container">
         <div class="row align-items-center">
             <!-- About Us Text -->
             <div class="col-md-6 mb-3">
                 <h2>About Us</h2>
-					<p>At <strong>Desi Home Flavour</strong>, we are committed to delivering pure, organic, and handcrafted products that bring the authentic taste of home-cooked meals to your kitchen. Founded in 2022, our journey started with the vision of offering high-quality, natural products that are rooted in tradition while promoting a healthy, sustainable lifestyle.</p>
+					<p>At <strong>Angapradesh Home Flavour Pvt. Ltd.</strong>, we are committed to delivering pure, organic, and handcrafted products that bring the authentic taste of home-cooked meals to your kitchen. Founded in April, 2021, our journey started with the vision of offering high-quality, natural products that are rooted in tradition while promoting a healthy, sustainable lifestyle.</p>
 
 					<p>We believe that food should not only nourish the body but also celebrate the rich heritage of Indian culture. Our product range includes <strong>Shudh Kachi Ghani Mustard Oil</strong>, <strong>Desi Sattu</strong>, <strong>Katarni Chura</strong>, <strong>Katarni Rice</strong>, <strong>Besan</strong>, and more—each crafted with care, using only the finest ingredients, all sourced from trusted farms.</p>
 
@@ -54,7 +90,7 @@
             <!-- Embedded Video -->
             <div class="col-md-6 mb-5">
                 <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/2iqJOA0Kr9Y?si=v50zmUxJA0puuzfe" title="Desi Home Flavour Introduction Video" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/9QGl1WkZ4QI?si=7SgsVKKxW4r_3lqX" title="Desi Home Flavour Introduction Video" allowfullscreen></iframe>
                 </div>
 			</div>
         </div>
@@ -109,7 +145,7 @@
 </section>
 
         <!-- Product Accordion Section -->
-        <section>
+        <section id="products">
     <h2>Our Products</h2>
     <div class="accordion" id="productAccordion">
         <!-- Mustard Oil Section -->
@@ -176,7 +212,7 @@
 						</button>
 					</div>
 					<button class="btn btn-success img-fluid d-block mx-auto">
-						<h6 class="text-center mb-0">Price: Rs 180/- per litre</h6>
+						<h6 class="text-center mb-0">Price: Rs 200/- per litre</h6>
 					</button> 
 				</div>
             </div>
@@ -403,13 +439,16 @@
 </section>
 
         <!-- Order Section -->
-        <section class="mt-5 text-center">
-            <h2>Order Now</h2>
+        <section class="mt-5 text-center" id="order" >
+            <h2>Order Now !</h2>
             <p>To place an order, contact us via:</p>
+			<button class="btn btn-primary" onclick="orderMyStore()">Order on MyStore ONDC</button>
             <button class="btn btn-primary me-2" onclick="orderWhatsApp()">Order on WhatsApp</button>
-            <button class="btn btn-secondary" onclick="orderPhone()">Call Us</button>
+			<button class="btn btn-secondary" onclick="orderPhone()">Call Us</button>
         </section>
 		
+		<!-- Order Section -->
+        <section class="mt-5 text-center" id="contact" >
 		<div class="row mt-5">
 		<div class="col-md-4 mb-5">
 					<h2>Our Location</h2>
@@ -433,7 +472,7 @@
 				</div>
             
 		</div>
-		
+		</section>
     </main>
 
     <!-- Footer Section -->
@@ -444,7 +483,9 @@
 
     <!-- Bootstrap JS Bundle and Custom Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script type="text/javascript">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+	<script type="text/javascript">
         function orderWhatsApp() {
             const whatsappNumber = '+919508706378';
             const message = "Hello, I would like to place an order for Desi Home Flavour products.";
@@ -455,6 +496,9 @@
             const phoneNumber = '+919508706378';
             window.location.href = `tel:${phoneNumber}`;
         }
+		function orderMyStore() {
+	 window.open(`https://www.mystore.in/en/product/desi-home-flavour-shhudh-mustard-oil`,'_blank');
+}
     </script>
 </body>
 </html>
