--- a/index.html
+++ b/index.html
@@ -443,8 +443,8 @@
 </section>
 
         <!-- Order Section -->
-        <section class="mt-5 text-center" id="order" >
-            <h2>Order Now !</h2>
+        <section class="mt-5 mb-5 text-center" id="order" >
+            <h5>Order Now !</h5>
             <p>To place an order, contact us via:</p>
 			<button class="btn btn-primary" onclick="orderMyStore()">Order on MyStore ONDC</button>
             <button class="btn btn-success" onclick="orderWhatsApp()">Order on WhatsApp</button>
@@ -455,7 +455,7 @@
         <section class="mt-5 text-center" id="contact" >
 		<div class="row mt-5">
 		<div class="col-md-4 mb-5">
-					<h2>Our Location</h2>
+					<h5>Our Location</h5>
 					<p>We are located at:</p>
 					<address>
 						Mansar Goswami Tola, Nathnagar,<br>
@@ -475,7 +475,7 @@
 					<p><b>Phone# : +91 9508706378</b></p>
 				</div>
             <div class="col-md-4 mb-5">
-				<h2>Social Media Details</h2>
+				<h5>Social Media Details</h5>
 				<p>Follow us on</p>
 				<div class="social-icons mt-3">
 					<a href="https://www.facebook.com/profile.php?id=100088383180143&mibextid=ZbWKwL" target="_blank" class="me-3">
