--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <!-- Navigation Bar (Collapsible for mobile) -->
-            <nav class="navbar navbar-expand-lg navbar-dark mt-3">
+            <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
