--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                             <span class="carousel-control-next-icon" aria-hidden="true" style="background-color: rgba(0, 0, 0, 0.5); border-radius: 50%;"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
-						<button class="btn btn-success img-fluid d-block mx-auto">
+						<button class="btn btn-success img-fluid d-block mx-auto mt-3">
 						<h6 class="text-center mb-0">Price: Rs 150/- per Kg</h6>
 					</button>
                     </div>
@@ -560,54 +560,54 @@
            <h2 data-lang-en="Order Now!" data-lang-hi="अभी ऑर्डर करें!">Order Now!</h2>
     <p data-lang-en="To place an order, contact us via:" data-lang-hi="ऑर्डर करने के लिए, हमसे संपर्क करें:">To place an order, contact us via:</p>
     
-    <button class="btn btn-primary m-2" onclick="orderMyStore()" data-lang-en="Order on MyStore ONDC" data-lang-hi="मायस्टोर ONDC पर ऑर्डर करें">Order on MyStore ONDC</button>
-    <button class="btn btn-success m-2" onclick="orderWhatsApp()" data-lang-en="Order on WhatsApp" data-lang-hi="व्हाट्सएप पर ऑर्डर करें">Order on WhatsApp</button>
-    <button class="btn btn-secondary m-2" onclick="orderPhone()" data-lang-en="Call Us" data-lang-hi="हमें कॉल करें">Call Us</button>
+    <button class="btn btn-primary m-2" onclick="orderMyStore()" data-lang-en="Order on MyStore ONDC" data-lang-hi="मायस्टोर ONDC पर ऑर्डर करें"><i class="fas fa-shopping-cart"></i> Order on MyStore ONDC</button>
+    <button class="btn btn-success m-2" onclick="orderWhatsApp()" data-lang-en="Order on WhatsApp" data-lang-hi="व्हाट्सएप पर ऑर्डर करें"><i class="fab fa-whatsapp fa-1x"></i>  Order on WhatsApp</button>
+    <button class="btn btn-secondary m-2" onclick="orderPhone()" data-lang-en="Call Us" data-lang-hi="हमें कॉल करें"><i class="fas fa-phone fa-1x"></i>  Call Us</button>
 
         </section>
 		
 		<!-- Order Section -->
-        <section class="mt-5 text-center" id="contact" >
-		<div class="row mt-5">
-		<div class="col-md-4 mb-5">
-					<h3 data-lang-en="Our Location" data-lang-hi="हमारा स्थान">Our Location</h3>
-						<p data-lang-en="We are located at:" data-lang-hi="हम यहां स्थित हैं:">We are located at:</p>
-						<address>
-							<span data-lang-en="Mansar Goswami Tola, Nathnagar," data-lang-hi="मंसर गोस्वामी टोला, नाथनगर,">Mansar Goswami Tola, Nathnagar,</span><br>
-							<span data-lang-en="Bhagalpur, 812005, Bihar, India" data-lang-hi="भागलपुर, 812005, बिहार, भारत">Bhagalpur, 812005, Bihar, India</span>
-						</address>
-		
-						<!-- Google Maps Embed -->
-						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-responsive-item" 
-									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4280.981404624978!2d86.97668877593078!3d25.237120230081548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f04bef67a43dcf%3A0x60fd73dacb99b694!2sDesi%20home%20flavour!5e1!3m2!1sen!2sus!4v1731493265605!5m2!1sen!2sus" 
-									allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section class="text-center mt-5" id="contact" >
+			<div class="row">
+					<div class="col-md-4 mb-5">
+						<h3 data-lang-en="Our Location" data-lang-hi="हमारा स्थान">Our Location</h3>
+							<p data-lang-en="We are located at:" data-lang-hi="हम यहां स्थित हैं:">We are located at:</p>
+							<address>
+								<span data-lang-en="Mansar Goswami Tola, Nathnagar," data-lang-hi="मंसर गोस्वामी टोला, नाथनगर,">Mansar Goswami Tola, Nathnagar,</span><br>
+								<span data-lang-en="Bhagalpur, 812005, Bihar, India" data-lang-hi="भागलपुर, 812005, बिहार, भारत">Bhagalpur, 812005, Bihar, India</span>
+							</address>
+			
+							<!-- Google Maps Embed -->
+							<div class="embed-responsive embed-responsive-16by9">
+								<iframe class="embed-responsive-item" 
+										src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4280.981404624978!2d86.97668877593078!3d25.237120230081548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f04bef67a43dcf%3A0x60fd73dacb99b694!2sDesi%20home%20flavour!5e1!3m2!1sen!2sus!4v1731493265605!5m2!1sen!2sus" 
+										allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							</div>
+					</div>
+					<div class="col-md-4 mb-5">
+						<h3 data-lang-en="Contact Details" data-lang-hi="संपर्क विवरण">Contact Details</h3>
+							<p>
+								<span data-lang-en="Email: angpradeshbgp31@gmail.com" data-lang-hi="ईमेल: angpradeshbgp31@gmail.com">Email: angpradeshbgp31@gmail.com</span><br>
+								<span data-lang-en="Phone# : +91 9508706378" data-lang-hi="फोन#: +91 9508706378"><b>Phone# : +91 9508706378</b></span>
+							</p>
+					</div>
+					<div class="col-md-4 mb-5">
+						<h3 data-lang-en="Social Media Details" data-lang-hi="सोशल मीडिया विवरण">Social Media Details</h3>
+						<p data-lang-en="Follow us on :" data-lang-hi="हमें यहाँ फॉलो करें:">Follow us on :</p>
+						<div class="social-icons mt-3">
+							<a href="https://www.facebook.com/profile.php?id=100088383180143&mibextid=ZbWKwL" target="_blank" class="me-3">
+								<i class="fab fa-facebook fa-2x" style="color:blue" ></i>
+							</a>
+							<a href="https://www.youtube.com/yourchannel" target="_blank" class="me-3">
+								<i class="fab fa-youtube fa-2x" style="color:red"></i>
+							</a>
+							<a href="https://www.instagram.com/desihomeflavour?igsh=N2htbnBhaTE0cmo5" target="_blank">
+								<i class="fab fa-instagram fa-2x" style="color:red"></i>
+							</a>
 						</div>
+					</div>
 				</div>
-				<div class="col-md-4 mb-5">
-					<h3 data-lang-en="Contact Details" data-lang-hi="संपर्क विवरण">Contact Details</h3>
-						<p>
-							<span data-lang-en="Email: angpradeshbgp31@gmail.com" data-lang-hi="ईमेल: angpradeshbgp31@gmail.com">Email: angpradeshbgp31@gmail.com</span><br>
-							<span data-lang-en="Phone# : +91 9508706378" data-lang-hi="फोन#: +91 9508706378"><b>Phone# : +91 9508706378</b></span>
-						</p>
-				</div>
-            <div class="col-md-4 mb-5">
-				<h3 data-lang-en="Social Media Details" data-lang-hi="सोशल मीडिया विवरण">Social Media Details</h3>
-				<p data-lang-en="Follow us on :" data-lang-hi="हमें यहाँ फॉलो करें:">Follow us on :</p>
-				<div class="social-icons mt-3">
-					<a href="https://www.facebook.com/profile.php?id=100088383180143&mibextid=ZbWKwL" target="_blank" class="me-3">
-						<i class="fab fa-facebook fa-2x" style="color:blue" ></i>
-					</a>
-					<a href="https://www.youtube.com/yourchannel" target="_blank" class="me-3">
-						<i class="fab fa-youtube fa-2x" style="color:red"></i>
-					</a>
-					<a href="https://www.instagram.com/desihomeflavour?igsh=N2htbnBhaTE0cmo5" target="_blank">
-						<i class="fab fa-instagram fa-2x" style="color:red"></i>
-					</a>
-				</div>
-			</div>
-		</div>
-		</section>
+			</section>
     </main>
 
     <!-- Footer Section -->
