--- a/index.html
+++ b/index.html
@@ -83,31 +83,31 @@
                     <div id="adCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="images/2d7a0a38-b84b-4da8-9680-2b0f4eb0b099.jpeg" class="d-block w-100 img-fluid mx-auto" alt="Ad1" style="max-height: 500px; object-fit: cover;">
+                                <img src="images/2d7a0a38-b84b-4da8-9680-2b0f4eb0b099.jpeg" class=" rounded d-block w-100 img-fluid mx-auto" alt="Ad1" style="max-height: 500px; object-fit: cover;">
                             </div>
 							<div class="carousel-item">
-                                <img src="images/Ad3.jpeg" class="d-block w-100 img-fluid mx-auto" alt="Ad3" style="max-height: 500px; object-fit: cover;">
+                                <img src="images/Ad3.jpeg" class=" rounded d-block w-100 img-fluid mx-auto" alt="Ad3" style="max-height: 500px; object-fit: cover;">
                             </div>
 							<div class="carousel-item">
-                                <img src="images/Ad4.jpeg" class="d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                                <img src="images/Ad4.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
 							<div class="carousel-item">
-                                <img src="images/c7dd927b-cea1-41b1-a37f-0b87f57b9e55.jpeg" class="d-block w-100 img-fluid mx-auto" alt="Ad5" style="max-height: 500px; object-fit: cover;">
+                                <img src="images/c7dd927b-cea1-41b1-a37f-0b87f57b9e55.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad5" style="max-height: 500px; object-fit: cover;">
                             </div>
 							<div class="carousel-item">
-                                <img src="images/oilAd3.jpeg" class="d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                                <img src="images/oilAd3.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
 							<div class="carousel-item">
-                                <img src="images/cfaa08a3-87b4-49dc-b32f-d69dbae0f530.jpeg" class="d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                                <img src="images/cfaa08a3-87b4-49dc-b32f-d69dbae0f530.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
 							<div class="carousel-item">
-                                <img src="images/5946f85d-e34b-4eb3-a863-ce24f6b1bf8e.jpeg" class="d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                                <img src="images/5946f85d-e34b-4eb3-a863-ce24f6b1bf8e.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
 							<div class="carousel-item">
-                                <img src="images/4a23ae68-0b19-430c-8079-fab7d0b0d315.jpeg" class="d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                                <img src="images/4a23ae68-0b19-430c-8079-fab7d0b0d315.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
 								<div class="carousel-item">
-                                <img src="images/f2c06657-fb12-49ba-b20e-d8591032a8c5.jpeg" class="d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                                <img src="images/f2c06657-fb12-49ba-b20e-d8591032a8c5.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
                             <!-- Add more images as needed -->
                         </div>
@@ -172,10 +172,10 @@
 			<div class="row align-items-center">
 			
             <!-- Embedded Video -->
-            <div class="col-md-8 mb-3 mx-auto">
-                <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/9QGl1WkZ4QI?si=7SgsVKKxW4r_3lqX" title="Desi Home Flavour Introduction Video" allowfullscreen></iframe>
-                </div>
+				<div class="col-md-10 mb-3 mx-auto">
+					<div class="ratio ratio-16x9 ">
+						<iframe class="rounded" src="https://www.youtube.com/embed/9QGl1WkZ4QI?si=7SgsVKKxW4r_3lqX" title="Desi Home Flavour Introduction Video" allowfullscreen></iframe>
+					</div>
 			</div>
         </div>
 		
@@ -601,7 +601,7 @@
 							<a href="https://www.facebook.com/profile.php?id=100088383180143&mibextid=ZbWKwL" target="_blank" class="me-3">
 								<i class="fab fa-facebook fa-2x" style="color:blue" ></i>
 							</a>
-							<a href="https://www.youtube.com/yourchannel" target="_blank" class="me-3">
+							<a href="https://www.youtube.com/@desihomeflavourshudhmustar9066" target="_blank" class="me-3">
 								<i class="fab fa-youtube fa-2x" style="color:red"></i>
 							</a>
 							<a href="https://www.instagram.com/desihomeflavour?igsh=N2htbnBhaTE0cmo5" target="_blank">
@@ -610,7 +610,9 @@
 						</div>
 					</div>
 				</div>
+				
 			</section>
+			
     </main>
 
     <!-- Footer Section -->
