--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 		<!-- Hero Section -->
 		<section class="hero" id="home">
 			<div class="container">
-				<h1 data-lang-en="Angapradesh Home Flavour Private Limited" data-lang-hi="अंगप्रदेश होम फ्लेवर प्राइवेट लिमिटेड">Welcome to Angapradesh Home Flavour Pvt. Ltd.</h1>
+				<h1 data-lang-en="Angapradesh Home Flavour" data-lang-hi="अंगप्रदेश होम फ्लेवर">Welcome to Angapradesh Home Flavour</h1>
 				<p data-lang-en="Pure Home Made Products - 100% Organic" data-lang-hi="शुद्ध घरेलू उत्पाद - 100% जैविक">Pure Home Made Products - 100% Organic</p>
 				<a href="#order" class="btn btn-warning btn-lg text-dark fw-bold">Order Now</a>
-				<div class="text-end" >
+			</div>
+		</section>
+		<div class="text-end" >
 							<label>
 								<input type="radio" name="language" value="en" checked onclick="changeLanguage(this.value)"> English
 							</label>
@@ -55,8 +57,6 @@
 								<input type="radio" name="language" value="hi" onclick="changeLanguage(this.value)"> हिन्दी
 							</label>				
 				</div>
-			</div>
-		</section>
     <!-- Main Content -->
     <main class="container my-3">
 				
