--- a/index.html
+++ b/index.html
@@ -90,9 +90,61 @@
 							<div class="carousel-item">
                                 <img src="images/4a23ae68-0b19-430c-8079-fab7d0b0d315.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
-								<div class="carousel-item">
+							<div class="carousel-item">
                                 <img src="images/f2c06657-fb12-49ba-b20e-d8591032a8c5.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
+
+
+							
+							<div class="carousel-item">
+                                <img src="images/I1.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I2.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I3.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I4.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I5.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I6.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I7.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I8.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I9.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I10.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I11.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I12.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I13.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I14.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I15.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							<div class="carousel-item">
+                                <img src="images/I16.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                            </div>
+							
                             <!-- Add more images as needed -->
                         </div>
                         <!-- Carousel controls -->
@@ -642,3 +694,4 @@ function changeLanguage(language) {
     </script>
 </body>
 </html>
+
