--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <!-- <img src="images/I2.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;"> -->
                             <!-- </div> -->
 							<div class="carousel-item">
-                                <img src="images/I3.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
+                                <img src="images/i3.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
 							<div class="carousel-item">
                                 <img src="images/I4.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
@@ -689,5 +689,6 @@ function changeLanguage(language) {
     </script>
 </body>
 </html>
+
 
 
