--- a/index.html
+++ b/index.html
@@ -201,14 +201,18 @@
 		</div>
             </div>
 			<div class="row align-items-center">
-			
             <!-- Embedded Video -->
-				<div class="col-md-10 mb-3 mx-auto">
-					<div class="ratio ratio-16x9 ">
+				<div class="col-md-5 mb-3 mx-auto">
+					<div class="ratio ratio-16x9" style="width:100px">
 						<iframe class="rounded" src="https://www.youtube.com/embed/9QGl1WkZ4QI?si=7SgsVKKxW4r_3lqX" title="Desi Home Flavour Introduction Video" allowfullscreen></iframe>
 					</div>
+				</div>
+				<div class="col-md-5 mb-3 mx-auto">
+					<div class="ratio ratio-16x9" style="width:100px">
+						<iframe class="rounded" src="https://www.youtube.com/embed/VjbrWYOqxxA?si=OOst5gNEvClJOQi-" title="Desi Home Flavour Introduction Video" allowfullscreen></iframe>
+					</div>
+				</div>
 			</div>
-        </div>
 		
 	 </div>
 
@@ -689,6 +693,5 @@ function changeLanguage(language) {
     </script>
 </body>
 </html>
-
 
 
