--- a/index.html
+++ b/index.html
@@ -66,27 +66,30 @@
                     <!-- Carousel for Ad Images -->
                     <div id="adCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="images/2d7a0a38-b84b-4da8-9680-2b0f4eb0b099.jpeg" class=" rounded d-block w-100 img-fluid mx-auto" alt="Ad1" style="max-height: 500px; object-fit: cover;">
-                            </div>
-							<div class="carousel-item">
-                                <img src="images/Ad3.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad3" style="max-height: 500px; object-fit: cover;">
-                            </div>
+                            <!-- <div class="carousel-item active"> -->
+                                <!-- <img src="images/2d7a0a38-b84b-4da8-9680-2b0f4eb0b099.jpeg" class=" rounded d-block w-100 img-fluid mx-auto" alt="Ad1" style="max-height: 500px; object-fit: cover;"> -->
+                            <!-- </div> -->
+							<!-- <div class="carousel-item"> -->
+                                <!-- <img src="images/Ad3.jpeg" class=" rounded d-block w-100 img-fluid mx-auto" alt="Ad3" style="max-height: 500px; object-fit: cover;"> -->
+                            <!-- </div> -->
 							<div class="carousel-item">
                                 <img src="images/Ad4.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
 							<div class="carousel-item">
                                 <img src="images/c7dd927b-cea1-41b1-a37f-0b87f57b9e55.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad5" style="max-height: 500px; object-fit: cover;">
                             </div>
+							<!-- <div class="carousel-item"> -->
+                                <!-- <img src="images/oilAd3.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;"> -->
+                            <!-- </div> -->
 							<div class="carousel-item">
                                 <img src="images/cfaa08a3-87b4-49dc-b32f-d69dbae0f530.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
 							<div class="carousel-item">
                                 <img src="images/5946f85d-e34b-4eb3-a863-ce24f6b1bf8e.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
-							<div class="carousel-item">
-                                <img src="images/4a23ae68-0b19-430c-8079-fab7d0b0d315.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
-                            </div>
+							<!-- <div class="carousel-item"> -->
+                                <!-- <img src="images/4a23ae68-0b19-430c-8079-fab7d0b0d315.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;"> -->
+                            <!-- </div> -->
 							<div class="carousel-item">
                                 <img src="images/f2c06657-fb12-49ba-b20e-d8591032a8c5.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
@@ -155,65 +158,72 @@
 	
         <!-- About Us Section -->
         <section class="mb-5" id="about">
-        <div class="row align-items-center">
-            <!-- About Us Text -->
-            <div class="col-md-12 mb-3 mt-5 bg-body-secondary border">
-                <h2 data-lang-en="About Us" data-lang-hi="हमारे बारे में" style="mb-3">About Us</h2>
-
-        <p data-lang-en="At Angapradesh Home Flavour Pvt. Ltd., we are committed to delivering pure, organic, and handcrafted products that bring the authentic taste of home-cooked meals to your kitchen. Founded in April, 2021, our journey started with the vision of offering high-quality, natural products that are rooted in tradition while promoting a healthy, sustainable lifestyle."
-           data-lang-hi="अंगप्रदेश होम फ्लेवर प्राइवेट लिमिटेड में, हम शुद्ध, जैविक और हस्तनिर्मित उत्पाद प्रदान करने के लिए प्रतिबद्ध हैं जो आपके रसोई में घर के बने भोजन का असली स्वाद लाते हैं। अप्रैल, 2021 में स्थापित, हमारी यात्रा उच्च-गुणवत्ता, प्राकृतिक उत्पादों की पेशकश के दृष्टिकोण के साथ शुरू हुई, जो परंपरा में निहित हैं और स्वस्थ, टिकाऊ जीवनशैली को बढ़ावा देते हैं।">
-            At Angapradesh Home Flavour Pvt. Ltd., we are committed to delivering pure, organic, and handcrafted products that bring the authentic taste of home-cooked meals to your kitchen.
-        </p>
-
-        <p data-lang-en="We believe that food should not only nourish the body but also celebrate the rich heritage of Indian culture. Our product range includes Shudh Kachi Ghani Mustard Oil, Desi Sattu, Katarni Chura, Katarni Rice, Besan, and more—each crafted with care, using only the finest ingredients, all sourced from trusted farms."
-           data-lang-hi="हम मानते हैं कि भोजन न केवल शरीर का पोषण करता है बल्कि भारतीय संस्कृति की समृद्ध विरासत का उत्सव भी मनाता है। हमारे उत्पादों में शुद्ध कच्ची घानी सरसों का तेल, देसी सत्तू, कतरनी चुरा, कतरनी चावल, बेसन और अन्य उत्पाद शामिल हैं, जो सभी विश्वसनीय स्रोतों से चुने गए उच्च गुणवत्ता वाले अवयवों से तैयार किए गए हैं।">
-            We believe that food should not only nourish the body but also celebrate the rich heritage of Indian culture.
-        </p>
-
-        <h5 data-lang-en="Our products are:" data-lang-hi="हमारे उत्पाद:">Our products are:</h5>
-        <ul>
-            <li data-lang-en="100% Organic and Pure: Free from preservatives, chemicals, and artificial additives."
-                data-lang-hi="100% जैविक और शुद्ध: प्रिजर्वेटिव्स, रसायनों और कृत्रिम योजकों से मुक्त।">
-                100% Organic and Pure: Free from preservatives, chemicals, and artificial additives.
-            </li>
-            <li data-lang-en="Nutrient-Rich: Packed with essential proteins, vitamins, and minerals, designed to support a healthy lifestyle."
-                data-lang-hi="पोषक तत्वों से भरपूर: आवश्यक प्रोटीन, विटामिन और खनिजों से युक्त, स्वस्थ जीवनशैली का समर्थन करने के लिए।">
-                Nutrient-Rich: Packed with essential proteins, vitamins, and minerals.
-            </li>
-            <li data-lang-en="Traditionally Made: We use time-honored methods like cold-pressing and stone grinding to retain the natural goodness and flavor of every product."
-                data-lang-hi="पारंपरिक रूप से बनाया गया: हम प्राकृतिक स्वाद को बरकरार रखने के लिए पारंपरिक तकनीकों का उपयोग करते हैं।">
-                Traditionally Made: We use time-honored methods like cold-pressing and stone grinding.
-            </li>
-        </ul>
-
-        <p data-lang-en="Since our inception, we have earned the trust of our customers and have been recognized with multiple awards for our dedication to quality and authenticity."
-           data-lang-hi="अपने आरंभ के बाद से, हमने अपने ग्राहकों का विश्वास अर्जित किया है और गुणवत्ता और प्रामाणिकता के प्रति हमारी प्रतिबद्धता के लिए कई पुरस्कार प्राप्त किए हैं।">
-            Since our inception, we have earned the trust of our customers and have been recognized with multiple awards.
-        </p>
-        
-        <p data-lang-en="Whether you're looking to add a splash of authentic flavor to your cooking or simply enjoy wholesome, natural ingredients, Desi Home Flavour is your go-to choice for quality, purity, and tradition."
-           data-lang-hi="चाहे आप अपने खाना पकाने में प्रामाणिक स्वाद जोड़ना चाहते हों या सिर्फ स्वस्थ, प्राकृतिक सामग्री का आनंद लेना चाहते हों, देसी होम फ्लेवर गुणवत्ता, शुद्धता और परंपरा का आपका पसंदीदा विकल्प है।">
-            Desi Home Flavour is your go-to choice for quality, purity, and tradition.
-        </p>
-		</div>
-            </div>
 			<div class="row align-items-center">
-            <!-- Embedded Video -->
-				<div class="col-md-5 mb-3 mx-auto">
-					<div class="ratio ratio-16x9" style="width:100px">
-						<iframe class="rounded" src="https://www.youtube.com/embed/9QGl1WkZ4QI?si=7SgsVKKxW4r_3lqX" title="Desi Home Flavour Introduction Video" allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class="col-md-5 mb-3 mx-auto">
-					<div class="ratio ratio-16x9" style="width:100px">
-						<iframe class="rounded" src="https://www.youtube.com/embed/VjbrWYOqxxA?si=OOst5gNEvClJOQi-" title="Desi Home Flavour Introduction Video" allowfullscreen></iframe>
-					</div>
+				<!-- About Us Text -->
+				<div class="col-md-12 mb-3 mt-5 bg-body-secondary border">
+					<h2 data-lang-en="About Us" data-lang-hi="हमारे बारे में" style="mb-3">About Us</h2>
+
+			<p data-lang-en="At Angapradesh Home Flavour Pvt. Ltd., we are committed to delivering pure, organic, and handcrafted products that bring the authentic taste of home-cooked meals to your kitchen. Founded in April, 2021, our journey started with the vision of offering high-quality, natural products that are rooted in tradition while promoting a healthy, sustainable lifestyle."
+			   data-lang-hi="अंगप्रदेश होम फ्लेवर प्राइवेट लिमिटेड में, हम शुद्ध, जैविक और हस्तनिर्मित उत्पाद प्रदान करने के लिए प्रतिबद्ध हैं जो आपके रसोई में घर के बने भोजन का असली स्वाद लाते हैं। अप्रैल, 2021 में स्थापित, हमारी यात्रा उच्च-गुणवत्ता, प्राकृतिक उत्पादों की पेशकश के दृष्टिकोण के साथ शुरू हुई, जो परंपरा में निहित हैं और स्वस्थ, टिकाऊ जीवनशैली को बढ़ावा देते हैं।">
+				At Angapradesh Home Flavour Pvt. Ltd., we are committed to delivering pure, organic, and handcrafted products that bring the authentic taste of home-cooked meals to your kitchen.
+			</p>
+
+			<p data-lang-en="We believe that food should not only nourish the body but also celebrate the rich heritage of Indian culture. Our product range includes Shudh Kachi Ghani Mustard Oil, Desi Sattu, Katarni Chura, Katarni Rice, Besan, and more—each crafted with care, using only the finest ingredients, all sourced from trusted farms."
+			   data-lang-hi="हम मानते हैं कि भोजन न केवल शरीर का पोषण करता है बल्कि भारतीय संस्कृति की समृद्ध विरासत का उत्सव भी मनाता है। हमारे उत्पादों में शुद्ध कच्ची घानी सरसों का तेल, देसी सत्तू, कतरनी चुरा, कतरनी चावल, बेसन और अन्य उत्पाद शामिल हैं, जो सभी विश्वसनीय स्रोतों से चुने गए उच्च गुणवत्ता वाले अवयवों से तैयार किए गए हैं।">
+				We believe that food should not only nourish the body but also celebrate the rich heritage of Indian culture.
+			</p>
+
+			<h5 data-lang-en="Our products are:" data-lang-hi="हमारे उत्पाद:">Our products are:</h5>
+			<ul>
+				<li data-lang-en="100% Organic and Pure: Free from preservatives, chemicals, and artificial additives."
+					data-lang-hi="100% जैविक और शुद्ध: प्रिजर्वेटिव्स, रसायनों और कृत्रिम योजकों से मुक्त।">
+					100% Organic and Pure: Free from preservatives, chemicals, and artificial additives.
+				</li>
+				<li data-lang-en="Nutrient-Rich: Packed with essential proteins, vitamins, and minerals, designed to support a healthy lifestyle."
+					data-lang-hi="पोषक तत्वों से भरपूर: आवश्यक प्रोटीन, विटामिन और खनिजों से युक्त, स्वस्थ जीवनशैली का समर्थन करने के लिए।">
+					Nutrient-Rich: Packed with essential proteins, vitamins, and minerals.
+				</li>
+				<li data-lang-en="Traditionally Made: We use time-honored methods like cold-pressing and stone grinding to retain the natural goodness and flavor of every product."
+					data-lang-hi="पारंपरिक रूप से बनाया गया: हम प्राकृतिक स्वाद को बरकरार रखने के लिए पारंपरिक तकनीकों का उपयोग करते हैं।">
+					Traditionally Made: We use time-honored methods like cold-pressing and stone grinding.
+				</li>
+			</ul>
+
+			<p data-lang-en="Since our inception, we have earned the trust of our customers and have been recognized with multiple awards for our dedication to quality and authenticity."
+			   data-lang-hi="अपने आरंभ के बाद से, हमने अपने ग्राहकों का विश्वास अर्जित किया है और गुणवत्ता और प्रामाणिकता के प्रति हमारी प्रतिबद्धता के लिए कई पुरस्कार प्राप्त किए हैं।">
+				Since our inception, we have earned the trust of our customers and have been recognized with multiple awards.
+			</p>
+			
+			<p data-lang-en="Whether you're looking to add a splash of authentic flavor to your cooking or simply enjoy wholesome, natural ingredients, Desi Home Flavour is your go-to choice for quality, purity, and tradition."
+			   data-lang-hi="चाहे आप अपने खाना पकाने में प्रामाणिक स्वाद जोड़ना चाहते हों या सिर्फ स्वस्थ, प्राकृतिक सामग्री का आनंद लेना चाहते हों, देसी होम फ्लेवर गुणवत्ता, शुद्धता और परंपरा का आपका पसंदीदा विकल्प है।">
+				Desi Home Flavour is your go-to choice for quality, purity, and tradition.
+			</p>
+			</div>
 				</div>
 			</div>
+		</section>
 		
-	 </div>
-
-</section>
+		<section class="mb-5">
+		 		<div class="row align-items-center">
+					<div class="col-md-10 mb-3 mx-auto">
+						<div class="ratio ratio-16x9" >
+							<iframe class="rounded" src="https://www.youtube.com/embed/VjbrWYOqxxA?si=OOst5gNEvClJOQi-" title="Desi Home Flavour Introduction Video2" allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>	
+		</section>
+		
+		<section class="mb-5">
+			<div class="row align-items-center">
+				<!-- Embedded Video -->
+					<div class="col-md-10 mb-3 mx-auto">
+						<div class="ratio ratio-16x9">
+							<iframe class="rounded" src="https://www.youtube.com/embed/9QGl1WkZ4QI?si=7SgsVKKxW4r_3lqX" title="Desi Home Flavour Introduction Video" allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>
+		</section>
+		
 
         <!-- Product Accordion Section -->
         <section id="products">
@@ -690,6 +700,5 @@ function changeLanguage(language) {
     </script>
 </body>
 </html>
-
 
 
