--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     <!-- Carousel for Ad Images -->
                     <div id="adCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <!-- <div class="carousel-item active"> -->
-                                <!-- <img src="images/2d7a0a38-b84b-4da8-9680-2b0f4eb0b099.jpeg" class=" rounded d-block w-100 img-fluid mx-auto" alt="Ad1" style="max-height: 500px; object-fit: cover;"> -->
-                            <!-- </div> -->
+                            <div class="carousel-item active">
+                               <img src="images/2d7a0a38-b84b-4da8-9680-2b0f4eb0b099.jpeg" class=" rounded d-block w-100 img-fluid mx-auto" alt="ad1" style="max-height: 500px; object-fit: cover;"> --> -->
+                            </div> 
 							<!-- <div class="carousel-item"> -->
                                 <!-- <img src="images/Ad3.jpeg" class=" rounded d-block w-100 img-fluid mx-auto" alt="Ad3" style="max-height: 500px; object-fit: cover;"> -->
                             <!-- </div> -->
@@ -218,7 +218,7 @@
 				<!-- Embedded Video -->
 					<div class="col-md-10 mb-3 mx-auto">
 						<div class="ratio ratio-16x9">
-							<iframe class="rounded" src="https://www.youtube.com/embed/9QGl1WkZ4QI?si=7SgsVKKxW4r_3lqX" title="Desi Home Flavour Introduction Video" allowfullscreen></iframe>
+							<iframe class="rounded" src="https://www.youtube.com/embed/9QGl1WkZ4QI?si=7SgsVKKxW4r_3lqX" title="Desi Home Flavour Introduction Video3" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
