--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							<div class="carousel-item">
                                 <img src="images/I15.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
-							<div class="carousel-item">
+							<div class="carousel-item active">
                                 <img src="images/I16.jpeg" class="rounded d-block w-100 img-fluid mx-auto" alt="Ad4" style="max-height: 500px; object-fit: cover;">
                             </div>
 							
@@ -700,5 +700,6 @@ function changeLanguage(language) {
     </script>
 </body>
 </html>
+
 
 
