--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <!-- Carousel for Ad Images -->
                     <div id="adCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
+                            <div class="carousel-item">
                                <img src="images/2d7a0a38-b84b-4da8-9680-2b0f4eb0b099.jpeg" class=" rounded d-block w-100 img-fluid mx-auto" alt="ad1" style="max-height: 500px; object-fit: cover;"> --> -->
                             </div> 
 							<!-- <div class="carousel-item"> -->
@@ -700,6 +700,7 @@ function changeLanguage(language) {
     </script>
 </body>
 </html>
+
 
 
 
