--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 			<div class="container">
-			<img src="images/Logo.jpeg" alt="Logo" style="width: 50px; height: 50px; border-radius: 50%;"/>
+			<img src="images/LOGO.jpeg" alt="Logo" style="width: 50px; height: 50px; border-radius: 50%;"/>
 				<a class="navbar-brand mx-3" href="#home" data-lang-en=" Angapradesh Home Flavour Private Limited" data-lang-hi="  अंगप्रदेश होम फ्लेवर प्राइवेट लिमिटेड"> Angapradesh Home Flavour Pvt. Ltd.</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
@@ -700,6 +700,7 @@ function changeLanguage(language) {
     </script>
 </body>
 </html>
+
 
 
 
